--- a/.github/workflows/custom-packages.yml
+++ b/.github/workflows/custom-packages.yml
@@ -45,6 +45,14 @@ jobs:
         run: |
           npm install --force
           npm run build
+      # Setup .NET Core SDK
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          source-url: ${{ env.AZURE_ARTIFACTS_FEED_URL }}
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.AZURE_DEVOPS_PAT}}
+
       - name: Build nuget packages
         run: dotnet build Elsa.Studio.sln --configuration Release /p:Version=${VERSION}
       - name: Test
