--- a/src/framework/Elsa.Studio.Core/Elsa.Studio.Core.csproj
+++ b/src/framework/Elsa.Studio.Core/Elsa.Studio.Core.csproj
@@ -43,7 +43,7 @@
 <!--    </ItemGroup>-->
 
     <ItemGroup Label="Elsa">
-        <PackageReference Include="Elsa.Api.Client" Version="3.0.5"/>
+        <PackageReference Include="Elsa.Api.Client" Version="3.1.0-preview.1063.13" />
     </ItemGroup>
 
 </Project>
